Finishing, Validasi belum