@@ -1,57 +1,198 @@
 package com.edmaputra.waktushalat.controller;
 
-import com.edmaputra.waktushalat.PrayTime;
+import com.edmaputra.waktushalat.model.ShalatDetail;
+import com.edmaputra.waktushalat.model.maps.Lokasi;
+import com.edmaputra.waktushalat.util.PrayTime;
+import com.edmaputra.waktushalat.model.Shalat;
+import com.edmaputra.waktushalat.model.maps.GoogleMaps;
 import com.edmaputra.waktushalat.util.Converter;
+import com.edmaputra.waktushalat.util.GoogleMapsApi;
 import org.springframework.web.bind.annotation.*;
 
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
 import java.util.Date;
 import java.util.List;
+import java.util.Map;
 
 @RestController
 @RequestMapping("/shalat")
 public class ShalatController {
 
-    private String tanggal;
+    private Date date;
+    private String address;
+    private Integer method;
+    private double timezone;
 
-    private Date date = new Date();
-    private String address = null;
-    private Integer method = 3;
-    private double timezone = 8.0;
+    private boolean valid;
+    private String errorMessage;
 
-    private boolean valid = true;
-    private String errorMessage = "";
-
-    @GetMapping(value = "/{d1}/{v1}")
+    @GetMapping(value = "/{k1}/{v1}")
     @ResponseBody
-    public String oneParamater(@PathVariable("d1") String k1, @PathVariable("v1") String v1){
-        String pesan = new String();
-        String find = k1+"/"+v1;
-        String[] params = new String[8];
-        params = find.split("/");
+    public Shalat oneParamater(@PathVariable("k1") String k1, @PathVariable("v1") String v1){
+        init();
+        Shalat shalat = null;
+
+        String[] params = setArray(k1, v1);
         if (params.length > 8) {
             valid = false;
             errorMessage += "Parameter Melebihi Batas";
         } else {
+            shalat = new Shalat();
             setParameter(params);
         }
 
         if (valid) {
-            pesan = getFinalMessage(date, timezone, method);
+            shalat = getShalatTime(address, date, timezone, method);
+            shalat.setStatus("OK");
+            shalat.setPesan("OK");
         } else {
-            pesan = errorMessage;
+            shalat.setStatus("FAILED");
+            shalat.setPesan(errorMessage);
         }
-        return pesan;
+        return shalat;
     }
 
-    private String getFinalMessage(Date date, double timezone, Integer method){
+    @GetMapping(value = "/{k1}/{v1}/{k2}/{v2}")
+    @ResponseBody
+    public Shalat oneParamater(@PathVariable("k1") String k1, @PathVariable("v1") String v1,
+                               @PathVariable("k2") String k2, @PathVariable("v2") String v2){
+        init();
+        Shalat shalat = null;
+
+        String[] params = setArray(k1, v1, k2, v2);
+        if (params.length > 8) {
+            valid = false;
+            errorMessage += "Parameter Melebihi Batas";
+        } else {
+            shalat = new Shalat();
+            setParameter(params);
+        }
+
+        if (valid) {
+            shalat = getShalatTime(address, date, timezone, method);
+            shalat.setStatus("OK");
+            shalat.setPesan("OK");
+        } else {
+            shalat.setStatus("FAILED");
+            shalat.setPesan(errorMessage);
+        }
+        return shalat;
+    }
+
+    @GetMapping(value = "/{k1}/{v1}/{k2}/{v2}/{k3}/{v3}")
+    @ResponseBody
+    public Shalat oneParamater(@PathVariable("k1") String k1, @PathVariable("v1") String v1,
+                               @PathVariable("k2") String k2, @PathVariable("v2") String v2,
+                               @PathVariable("k3") String k3, @PathVariable("v3") String v3){
+        init();
+        Shalat shalat = null;
+
+        String[] params = setArray(k1, v1, k2, v2, k3, v3);
+        if (params.length > 8) {
+            valid = false;
+            errorMessage += "Parameter Melebihi Batas";
+        } else {
+            shalat = new Shalat();
+            setParameter(params);
+        }
+
+        if (valid) {
+            shalat = getShalatTime(address, date, timezone, method);
+            shalat.setStatus("OK");
+            shalat.setPesan("OK");
+        } else {
+            shalat.setStatus("FAILED");
+            shalat.setPesan(errorMessage);
+        }
+        return shalat;
+    }
+
+    @GetMapping(value = "/{k1}/{v1}/{k2}/{v2}/{k3}/{v3}/{k4}/{v4}")
+    @ResponseBody
+    public Shalat oneParamater(@PathVariable("k1") String k1, @PathVariable("v1") String v1,
+                               @PathVariable("k2") String k2, @PathVariable("v2") String v2,
+                               @PathVariable("k3") String k3, @PathVariable("v3") String v3,
+                               @PathVariable("k4") String k4, @PathVariable("v4") String v4){
+        init();
+        Shalat shalat = null;
+        String[] params = setArray(k1, v1, k2, v2, k3, v3, k4, v4);
+
+        if (params.length > 8) {
+            valid = false;
+            errorMessage += "Parameter Melebihi Batas";
+        } else {
+            shalat = new Shalat();
+            setParameter(params);
+        }
+
+        if (valid) {
+            shalat = getShalatTime(address, date, timezone, method);
+            shalat.setStatus("OK");
+            shalat.setPesan("OK");
+        } else {
+            shalat.setStatus("FAILED");
+            shalat.setPesan(errorMessage);
+        }
+        return shalat;
+    }
+
+    private String[] setArray(String... arg) {
+        StringBuilder builder = new StringBuilder();
+        int i = 0;
+        for (String str : arg){
+//            if (i == 0 || i % 2 == 0) {
+//                if (!str.equals("d") || !str.equals("m") || !str.equals("l") || !str.equals("t")) {
+//                    valid = false;
+//                    errorMessage = "Ada Kesalahan Parameter";
+//                }
+//            }
+            builder.append(str);
+            i++;
+            if (i != arg.length) {
+                builder.append("/");
+            }
+        }
+        String[] params = builder.toString().split("/");
+        return params;
+    }
+
+    private void init(){
+        valid = true;
+        date = new Date();
+        timezone = 8;
+        method = 3;
+        address = null;
+        errorMessage = "";
+    }
+
+    private Shalat getShalatTime(String address, Date date, double timezone, Integer method) {
         PrayTime prayTime = new PrayTime();
-        List<String> list = prayTime.getPrayTime(2.7677654, 117.4321452, timezone, method, date);
-        return setMessage(list, date, timezone, method);
+
+        GoogleMaps gmaps = GoogleMapsApi.getGoogleMaps(address);
+        Lokasi lokasi = gmaps.getResults().get(0);
+        double lat = lokasi.getGeometry().getLocation().getLat();
+        double lng = lokasi.getGeometry().getLocation().getLng();
+        List<ShalatDetail> prays = prayTime.getListPrayTime(lat, lng, timezone, method, date);
+
+        Shalat shalat = new Shalat();
+        shalat.setTitle("Waktu Shalat");
+        shalat.setWilayah(gmaps.getResults().get(0).getFormatted_address());
+        shalat.setTimezone(timezone);
+        shalat.setTanggal(date);
+        shalat.setTanggal_string(Converter.dateToStringDashSeparator(date));
+        shalat.setMetode(method);
+        shalat.setNamaMetode(getCalcMethodNames(method));
+        shalat.setShalats(prays);
+
+        return shalat;
     }
 
     private void setParameter(String[] params) {
+//         else {
+//            valid = false;
+//            errorMessage = "Ada Kesalahan Parameter";
+//        }
         for (int i = 0; i < params.length; i++) {
             if (params[i].equals("d")) {
                 if (isValidDate(params[i+1])) {
@@ -59,53 +200,38 @@ public class ShalatController {
                     continue;
                 } else {
                     valid = false;
-                    errorMessage += "Format Tanggal Salah";
+                    errorMessage = "Format Tanggal Salah, pastikan Format Tanggal ddMMyyyy";
                 }
             } else if (params[i].equals("l")) {
                 address = params[i+1];
                 continue;
             } else if (params[i].equals("m")) {
-                int metode = new Integer(params[i+1]);
-                if (metode > 6 || metode < 0){
+                int metode = Integer.valueOf(params[i+1]);
+                if (!isNumeric(Integer.toString(metode))) {
                     valid = false;
-                    errorMessage += "Pilihan Metode Kalkulasi Tidak Ada, Harap Pilih 0-6 \n";
-                } else if (!isNumeric(Integer.toString(metode))) {
+                    errorMessage = "Format Metode Salah";
+                } else if (metode > 6 || metode < 0){
                     valid = false;
-                    errorMessage += "Format Metode Salah \n";
+                    errorMessage += "Pilihan Metode Kalkulasi Tidak Ada, Harap Pilih 0-6";
                 } else if (isNumeric(Integer.toString(metode))) {
-                    this.method = new Integer(params[i+1]);
+                    this.method = Integer.valueOf(params[i+1]);
                     continue;
                 }
 
             } else if (params[i].equals("t")) {
-                double tz = new Double(params[i+1]);
-                if (tz > 14 || tz < -10) {
+                double tz = Double.valueOf(params[i+1]);
+                if (!isNumeric(Double.toString(tz))) {
                     valid = false;
-                    errorMessage += "Pilihan TimeZone Melebihi Batas \n";
-                } else if (!isNumeric(Double.toString(tz))) {
+                    errorMessage += "Format Timezone Salah";
+                } else if (tz > 14 || tz < -10) {
                     valid = false;
-                    errorMessage += "Format Timezone Salah \n";
+                    errorMessage = "Pilihan TimeZone Melebihi Batas";
                 } else if (isNumeric(Double.toString(tz))) {
-                    timezone = new Double(params[i+1]);
+                    timezone = Double.valueOf(params[i+1]);
                     continue;
                 }
             }
         }
-    }
-
-    private String setMessage(List<String> list, Date date, double timezone, Integer method){
-        String pesan = new String();
-        String tanggal = Converter.dateToStringDashSeparator(date);
-        pesan += "WAKTU SHALAT\n" +
-                "Untuk Daerah \n" +
-                "Tanggal : " + tanggal +"\n" +
-                "Timezone : "+ (int) timezone +" \n" +
-                "Metode Kalkulasi : "+ getCalcMethodNames(method) + "\n\n";
-        for (int i = 0; i < list.size(); i++){
-            pesan += list.get(i) + "\n";
-        }
-
-        return pesan;
     }
 
     private String getCalcMethodNames(int calcMethod) {
@@ -134,7 +260,6 @@ public class ShalatController {
         dateFormat.setLenient(false);
         try {
             dateFormat.parse(inDate.trim());
-            tanggal = inDate.trim();
         } catch (ParseException pe) {
             return false;
         }
